# ampterm

./: .envrc  .gitignore  .nvim.lua  .nvimrc  Architecture.org  Cargo.toml  Features.org  LICENSE  README.org  demo.tape  flake.nix  shell.nix
.config/: config.json5
nix/: homeManager.nix
src/: action.rs  app.rs  cli.rs  client.rs  compid.rs  components.rs  config.rs  focusable.rs  hasparams.rs  helper.rs  logging.rs  lyricsclient.rs  main.rs  mpris.rs  noparams.rs  osclient.rs  playerworker.rs  queryworker.rs  stateful.rs  stateless.rs  statelib.rs  tests.rs  tui.rs  visualmode.rs  worker.rs
src/action/: accountupdatefailed.rs  action.rs  getplaylist.rs  getplaylists.rs  globalaction.rs  localaction.rs  login.rs  loginaction.rs  loginresponse.rs  playlistsresponse.rs  useraction.rs
src/app/: delayer.rs
src/client/: createclienterror.rs  error.rs
src/components/: home.rs  lib.rs  traits.rs
src/config/: appconfig.rs  authconfig.rs  behaviourconfig.rs  bpmtoyconfig.rs  coverartconfig.rs  featuresconfig.rs  keybindings.rs  keyparser.rs  localkeybinds.rs  lyricsconfig.rs  pathconfig.rs  playlistsconfig.rs  styleconfig.rs
src/helper/: selection.rs  strings.rs
src/lyricsclient/: getlyrics.rs  lrclib.rs
src/osclient/: error.rs  response.rs  types.rs
src/playerworker/: player.rs  playerstatus.rs  queueitem.rs  realtime.rs  streamerror.rs  streamreader.rs
src/queryworker/: highlevelquery.rs  query.rs  response.rs
src/snapshots/: ampterm__app__Test 1-002.snap  ampterm__app__Test 1-003.snap  ampterm__app__Test 1-004.snap  ampterm__app__Test 1-005.snap  ampterm__app__Test 1-006.snap  ampterm__app__Test 1a - Login Screen.snap  ampterm__app__Test 1b.snap  ampterm__app__Test 1c.snap  ampterm__app__Test 1d.snap  ampterm__app__Test 1e.snap  ampterm__app__Test 1f.snap  (+18 more)
(+92 files in other folders)
