[package]
name = "ampterm"
version = "0.1.0"
edition = "2021"
description = "Ampterm"
authors = ["MangoCubes <10383115+MangoCubes@users.noreply.github.com>"]
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa-sys = "0.3.1"
better-panic = "0.3.0"
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.31"
futures-util = "0.3.31"
human-panic = "2.0.2"
image = "0.25.8"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
md5 = "0.8.0"
pretty_assertions = "1.4.1"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["serde", "macros"] }
ratatui-image = "8.0.1"
regex = "1.12.2"
reqwest = { version = "0.12.15", features = ["json"] }
rodio = { version = "0.20.1", features = ["symphonia-aac", "symphonia-alac", "symphonia-flac", "symphonia-mp3", "symphonia-vorbis", "symphonia-wav"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
serde_repr = "0.1.20"
signal-hook = "0.3.17"
stream-download = "0.19.1"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tempdir = "0.3.7"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-textarea = "*"

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "1.0.2", features = ["build", "cargo"] }
